# -quilo-painel-seu-perfil-organiza-es-uso-kiloclaw-kiloclaw-configura-es-nuvem-construtor-de-aplicati

./: .gitignore  Dockerfile  EVOLUTION_ROADMAP.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
holoos/: PREVIEW.md  __init__.py  index.html  main.py  omni.py
holoos/agent/: __init__.py  engine.py
holoos/ai/: __init__.py  hub.py
holoos/api/: __init__.py  main.py
holoos/aura/: aura.py  demo.py
holoos/auto/: autoboot.py  network_survival.py
holoos/cli/: main.py
holoos/communication/: __init__.py  hub.py
holoos/compiler/: __init__.py  transpiler.py
holoos/config/: __init__.py  manager.py
holoos/consciousness/: __init__.py  api.py  lucid.py
holoos/core/: ethical.py  pipeline.py  registry.py  types.py
holoos/database/: __init__.py  manager.py
holoos/distributed/: __init__.py  executor.py
holoos/events/: __init__.py  bus.py
holoos/gateway/: __init__.py  gateway.py  llm.py
holoos/generator/: __init__.py  code_gen.py
holoos/genesis/: __init__.py  api.py  demo.py  genesis.py
holoos/governance/: __init__.py  assembly.py
holoos/integrations/: __init__.py
holoos/kernel/: __init__.py  advanced_attention.py  consciousness.py  self_kernel.py  soul.py
holoos/memory/: __init__.py  system.py
holoos/monitoring/: __init__.py  observability.py  system.py
holoos/nous/: nous.py
holoos/orchestration/: __init__.py
holoos/planning/: __init__.py  planner.py
holoos/plugins/: __init__.py  manager.py
holoos/quantizer/: __init__.py  engine.py
holoos/rag/: __init__.py
tests/: test_core.py
(+18 files in other folders)
