[project]
name = "holoos"
version = "0.1.0"
description = "Unified AI System - LLM Quantization, Multi-Language Transpiler, AI Agents, Distributed Processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["holoos"]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python-version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false